force-app/main/default/objects/Address__c/fields/Address_Validation__c.field-meta.xml
<CustomField>
    <fullName>Address_Validation__c</fullName>
    <label>Address Validation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>