force-app/main/default/objects/Address__c/fields/All_Address__c.field-meta.xml
<CustomField>
    <fullName>All_Address__c</fullName>
    <label>All Address</label>
    <type>TextArea</type>
</CustomField>