force-app/main/default/objects/Address__c/fields/Bill_To_Usage__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Usage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill To Usage</label>
    <type>Checkbox</type>
</CustomField>