force-app/main/default/objects/Address__c/fields/Install_At__c.field-meta.xml
<CustomField>
    <fullName>Install_At__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Install At</label>
    <type>Checkbox</type>
</CustomField>