force-app/main/default/objects/Address__c/fields/Oracle_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Site_ID__c</fullName>
    <label>Oracle Site ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>