force-app/main/default/objects/Address__c/fields/Pay_To__c.field-meta.xml
<CustomField>
    <fullName>Pay_To__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pay To</label>
    <type>Checkbox</type>
</CustomField>