force-app/main/default/objects/Address__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ship To</label>
    <type>Checkbox</type>
</CustomField>