force-app/main/default/objects/Address__c/fields/Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Validation_Status__c</fullName>
    <label>Validation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>