force-app/main/default/objects/Address__c/fields/Validation_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Validation_Time_Stamp__c</fullName>
    <label>Validation Time Stamp</label>
    <type>DateTime</type>
</CustomField>