force-app/main/default/objects/Address__c/recordTypes/Lessee.recordType-meta.xml
<RecordType>
    <fullName>Lessee</fullName>
    <active>true</active>
    <label>Lessee</label>
</RecordType>